# TRIAD-6C

./: CMakeLists.txt  README.md  gencolors.py
include/: bct.h  bvs1.h  colors.h  cpu.h  machine.h  triad6.h  utility.h
src/: bct.c  bvs1.c  cpu.c  machine.c  main.c
